# doction

./: ..gitignore.un~  .claudeignore  .dockerignore  .env.example  .gitignore  .graphifyignore  .plan.txt.un~  .plant.md.un~  .pyproject.toml.un~  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  compose.yaml  doction.sh  important.md  main.py  package-lock.json  plan.md  pyproject.toml
.gitea/workflows/: ci-cd.yml  deploy.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
app/: .mcp.py.un~  auth.py  db.py  embeddings.py  git_repo.py  i18n.py  logging_config.py  main.py  markdown.py  mcp.py  mcp_server.py  meta.py  models.py  seed.py
app/static/: prose.js  style.css  ui.js
app/templates/: 500.html  base.html  edit.html  empty.html  history.html  history_detail.html  history_diff.html  login.html  new.html  not_found.html  page.html  register.html  settings.html  trash.html
app/templates/partials/: controls.html  search_results.html  sidebar_list.html
deploy/: README.md  backup.sh  doction-deploy.service  doction-deploy.timer  restore.sh
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  auth.jsx  avatar.js  i18n.jsx  main.jsx  markdown.js  prose.js  theme.js
frontend/src/components/: CommandPalette.jsx  KeyboardShortcuts.jsx  LanguageToggle.jsx  Layout.jsx  Markdown.jsx  Sidebar.jsx  Toc.jsx  WorkspaceSettings.jsx
frontend/src/pages/: Editor.jsx  History.jsx  Login.jsx  Reader.jsx  Register.jsx  Settings.jsx  Trash.jsx
infra/: README.md  backup.sh  compose.yaml  deploy.sh  doction-backup.service  doction-backup.timer  restore.sh
scripts/: create_user.py  migrate_sqlite_to_postgres.py
tests/: conftest.py  test.py  test_app.py  test_data.py  test_firstrun.py  test_git.py  test_hardening.py  test_intel.py  test_mcp.py  test_meta.py  test_multiuser.py  test_semantic.py  test_spa_api.py  test_tokens.py
