[project]
name = "doction"
version = "0.2"
description = "Minimalist, markdown-first DevOps knowledge system"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "PyJWT>=2.8",
    "python-multipart>=0.0.18",
    "gitpython>=3.1",
    "numpy>=1.26",
    "sentence-transformers>=3.0",
    "mcp>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q -m 'not slow'"
pythonpath = ["."]
markers = ["slow: heavy tests skipped in CI (require model download)"]
