[project]
name = "doction"
version = "0.11"
description = "Minimalist, markdown-first DevOps knowledge system"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "PyJWT>=2.8",
    "python-multipart>=0.0.18",
    # Búsqueda semántica local (opt-in vía SEMANTIC_SEARCH): modelo ONNX en el
    # contenedor, sin servicios externos. numpy entra de la mano de onnxruntime.
    "onnxruntime>=1.20",
    "tokenizers>=0.21",
    "numpy>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI usa estos como valores por defecto de parámetros (patrón estándar).
extend-immutable-calls = ["fastapi.File", "fastapi.Form"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
